# tiktok-search-api

./: .gitignore  README.md  requirements.txt
.serena/: project.yml
mobile/: README_signed_api.md  api_signed.py  config_direct.yaml  config_signed.yaml  config_working.yaml  demo.html
mobile/tiktoksearch/: __init__.py  client.py  config.py  errors.py  filters.py  mapping.py  pool.py  pyproject.toml  rapid_signer.py  signing.py
mobile/tiktoksearch/api/: __init__.py  app.py  schemas.py
mobile/tiktoksearch/docs/: API_REFERENCE.md
mobile/tiktoksearch/tests/: test_filters.py
mobile/tiktoksearch/tiktok_signer/: .gitignore  __init__.py  exception.py  metasec.py  native.py  ttencrypt.py
mobile/tiktoksearch/tiktok_signer/cipher/: AES.py  RC4.py  SIMON.py
mobile/tiktoksearch/tiktok_signer/helpers/: argus.py  ladon.py
mobile/tiktoksearch/tiktok_signer/protobuf/: protobuf.py
